2009-06-05  Jb Evain  <jbevain@novell.com>

	* ModuleBuilder.cs (DefineManifestResource): expose during
	BOOTSTRAP_NET_2_0 as well.

2009-06-02 Rodrigo Kumpera  <rkumpera@novell.com>

	* ILGenerator.cs (EmitCall): Under 2.0 profile ignore optional
	arguments if the method call conv is not vararg.

2009-05-22  Zoltan Varga  <vargaz@gmail.com>

	* AssemblyBuilder.cs (.ctor): Error out if the not yet supported 
	RunAndCollect flag was given.

	* AssemblyBuilderAccess.cs: Add RunAndCollect flag for net 4.0.

2009-03-20  Sebastien Pouliot  <sebastien@ximian.com>

	* DynamicMethod.cs (Invoke): Wrap a MethodAccessException inside a
	TargetInvocationException (required for Moonlight 2).

2009-03-18  Zoltan Varga  <vargaz@gmail.com>

	* TypeBuilder.cs (GetGenericTypeDefinition): Call the icall instead of
	the base method which now throws an exception.

2009-02-23  Zoltan Varga  <vargaz@gmail.com>

	* ILGenerator.cs SignatureHelper.cs: Add checks for user types.

2008-02-21  Jb Evain  <jbevain@novell.com>

	* ModuleBuilder.cs: override GetModuleVersionId
	so that we can get the module guid from Module.ModuleVersionId.
	Part of the fix for #471302.

2009-01-24  Zoltan Varga  <vargaz@gmail.com>

	* SignatureHelper.cs: Fix warnings.

	* ILGenerator.cs: Fix warnings.

2008-11-23  Gert Driesen  <drieseng@users.sourceforge.net>

	* AssemblyBuilder.cs: When assembly is strongnamed, then explicitly
	set PublicKey flag. Do not allow AssemblyFlagsAttribute to overwrite
	flags value, and ignore PublicKey flag if assembly is not strongnamed.
	Fixes bug #432423.

2008-11-11 Rodrigo Kumpera  <rkumpera@novell.com>

	* ConstructorOnTypeBuilderInst.cs (MetadataToken): Make this property
	work under compiler context. Same hack as the one applied to
	MethodOnTypeBuilderInst.

	Fixes #442610.

2008-09-23  Marek Safar  <marek.safar@gmail.com>

	* ModuleBuilder.cs: Fixed NRE when default symbol writer cannot be
	loaded. 
 
2008-09-16  Jb Evain  <jbevain@novell.com>
